--- a/form.html
+++ b/form.html
@@ -25,9 +25,9 @@
 	     	     				<td><input type="Email" name=""></td>
 	     	     			</tr>
 	     	     			<tr>
-	     	     				<td>Contact Nuber</td>
+	     	     				<td>Contact Number</td>
 	     	     				<td>:</td>
-	     	     				<td><input type="numer" name=""></td>
+	     	     				<td><input type="number" name=""></td>
 	     	     			</tr>
                             <tr>
                             	<td>Maritial status</td>
